--- a/css/style.css
+++ b/css/style.css
@@ -725,9 +725,9 @@ div.datosCompra form input:focus {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2000;
-    background-color: white;
+    background-color: wheat;
     border-radius: 10px;
-    border: 4px solid #4287f5;
+    border: 4px solid wheat;
     color: black;
 }
 
@@ -767,7 +767,7 @@ div.boxMetodoDePago select:focus {
 }
 
 div.metodoDePago form input:focus {
-    background-color: #2098D1;
+    background-color: rgb(254, 95, 85, 0.6);
     color: white;
 }
 
@@ -777,7 +777,7 @@ div.metodoDePago form input:focus {
     margin: 10px 0px;
     border: none;
     border-radius: 10px;
-    background-color: rgb(216, 216, 216);
+    background-color: rgb(254, 95, 85, 0.6);
 }
 .confirmarDatos {
     height: 22em;
