--- a/css/style.css
+++ b/css/style.css
@@ -879,7 +879,7 @@ div.compraCompletada a:hover {
     display: none;
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498db;
+    border-top: 16px solid rgb(254, 95, 85, 0.6);
     width: 120px;
     height: 120px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
